apps/test-app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
  labels:
    app.kubernetes.io/name: test-app
    app.kubernetes.io/part-of: test-app
