apps/test-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-app
  labels:
    app.kubernetes.io/name: test-app
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: test-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: test-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
